// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`text when custom config is provided when the custom config overrides a value should replace the default value 1`] = `
Object {
  "decoration": Object {
    "lineThrough": Object {
      "text-decoration": "line-through",
    },
    "none": Object {
      "text-decoration": "none",
    },
    "underline": Object {
      "text-decoration": "underline",
    },
  },
  "letterSpacing": Object {
    "large": Object {
      "letter-spacing": ".2em",
    },
    "medium": Object {
      "letter-spacing": ".125em",
    },
    "small": Object {
      "letter-spacing": ".075em",
    },
  },
  "lineHeight": Object {
    "large": Object {
      "line-height": 2,
    },
    "medium": Object {
      "line-height": 1.5,
    },
    "small": Object {
      "line-height": 1,
    },
  },
  "sans": Object {
    "font-family": "sans",
  },
  "serif": Object {
    "font-family": "serif",
  },
  "size": Object {
    "large": Object {
      "font-size": "3rem",
    },
    "medium": Object {
      "font-size": "2rem",
    },
    "small": Object {
      "font-size": ".5rem",
    },
  },
  "style": Object {
    "italic": Object {
      "text-style": "italic",
    },
    "normal": Object {
      "text-style": "normal",
    },
    "oblique": Object {
      "text-style": "oblique",
    },
  },
  "transform": Object {
    "capitalize": Object {
      "text-transform": "capitalize",
    },
    "lowercase": Object {
      "text-transform": "lowercase",
    },
    "none": Object {
      "text-transform": "none",
    },
    "uppercase": Object {
      "text-transform": "uppercase",
    },
  },
  "weight": Object {
    "bold": Object {
      "font-weight": "bold",
    },
    "normal": Object {
      "font-weight": "normal",
    },
    "thin": Object {
      "font-weight": "200",
    },
  },
}
`;

exports[`text when custom config is provided when the custom config provides a new value should add the value and not amend any existing values 1`] = `
Object {
  "decoration": Object {
    "lineThrough": Object {
      "text-decoration": "line-through",
    },
    "none": Object {
      "text-decoration": "none",
    },
    "underline": Object {
      "text-decoration": "underline",
    },
  },
  "letterSpacing": Object {
    "large": Object {
      "letter-spacing": ".2em",
    },
    "medium": Object {
      "letter-spacing": ".125em",
    },
    "small": Object {
      "letter-spacing": ".075em",
    },
  },
  "lineHeight": Object {
    "large": Object {
      "line-height": 2,
    },
    "medium": Object {
      "line-height": 1.5,
    },
    "small": Object {
      "line-height": 1,
    },
  },
  "sans": Object {
    "font-family": "sans",
  },
  "serif": Object {
    "font-family": "serif",
  },
  "size": Object {
    "extrasmall": Object {
      "font-size": ".25rem",
    },
    "large": Object {
      "font-size": "3rem",
    },
    "medium": Object {
      "font-size": "2rem",
    },
    "small": Object {
      "font-size": "1rem",
    },
  },
  "style": Object {
    "italic": Object {
      "text-style": "italic",
    },
    "normal": Object {
      "text-style": "normal",
    },
    "oblique": Object {
      "text-style": "oblique",
    },
  },
  "transform": Object {
    "capitalize": Object {
      "text-transform": "capitalize",
    },
    "lowercase": Object {
      "text-transform": "lowercase",
    },
    "none": Object {
      "text-transform": "none",
    },
    "uppercase": Object {
      "text-transform": "uppercase",
    },
  },
  "weight": Object {
    "bold": Object {
      "font-weight": "bold",
    },
    "normal": Object {
      "font-weight": "normal",
    },
    "thin": Object {
      "font-weight": "200",
    },
  },
}
`;

exports[`text when no custom config is provided should return the default config 1`] = `
Object {
  "decoration": Object {
    "lineThrough": Object {
      "text-decoration": "line-through",
    },
    "none": Object {
      "text-decoration": "none",
    },
    "underline": Object {
      "text-decoration": "underline",
    },
  },
  "letterSpacing": Object {
    "large": Object {
      "letter-spacing": ".2em",
    },
    "medium": Object {
      "letter-spacing": ".125em",
    },
    "small": Object {
      "letter-spacing": ".075em",
    },
  },
  "lineHeight": Object {
    "large": Object {
      "line-height": 2,
    },
    "medium": Object {
      "line-height": 1.5,
    },
    "small": Object {
      "line-height": 1,
    },
  },
  "sans": Object {
    "font-family": "sans",
  },
  "serif": Object {
    "font-family": "serif",
  },
  "size": Object {
    "large": Object {
      "font-size": "3rem",
    },
    "medium": Object {
      "font-size": "2rem",
    },
    "small": Object {
      "font-size": "1rem",
    },
  },
  "style": Object {
    "italic": Object {
      "text-style": "italic",
    },
    "normal": Object {
      "text-style": "normal",
    },
    "oblique": Object {
      "text-style": "oblique",
    },
  },
  "transform": Object {
    "capitalize": Object {
      "text-transform": "capitalize",
    },
    "lowercase": Object {
      "text-transform": "lowercase",
    },
    "none": Object {
      "text-transform": "none",
    },
    "uppercase": Object {
      "text-transform": "uppercase",
    },
  },
  "weight": Object {
    "bold": Object {
      "font-weight": "bold",
    },
    "normal": Object {
      "font-weight": "normal",
    },
    "thin": Object {
      "font-weight": "200",
    },
  },
}
`;
